@@ -4,6 +4,7 @@ Version 4.0.22 (2014-04-xx)
 	Fixed bug where the selection would be at the wrong location sometimes for inline editor instances.
 	Fixed so old language packs get properly loaded when the new longer language code format is used.
 	Fixed so all track changes junk such as comments, deletes etc gets removed when pasting from Word.
+	Fixed so non image data urls is blocked by default since they might contain svgs with scripts.
 Version 4.0.21 (2014-04-01)
 	Added new getCssText method to formatter to get the preview css text value for a format to be used in UI.
 	Added new table_grid option that allows you to disable the table grid and use a dialog.
